# testproject

./: .gitignore  PDF Compress.command  README.md  launcher_cli.py  launcher_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
pdfcompress/: __init__.py  __main__.py  cli.py  core.py  gui.py  office.py
scripts/: build-macos.sh  build-windows.bat
tests/: test_core.py  test_office.py
tg-max-bridge/: .env.example  .gitignore  README.md  tg-max-bridge.service
tg-max-bridge/bridge/: __init__.py  __main__.py  config.py  idmap.py  maxclient.py  relay.py  tgclient.py
tg-max-bridge/tests/: test_bridge.py
