[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfcompress"
version = "1.2.0"
description = "Офлайн-инструмент сжатия больших PDF и офисных файлов для macOS и Windows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pikepdf>=8.0",
    "Pillow>=10.0",
]

[project.scripts]
pdfcompress = "pdfcompress.cli:main"

[project.gui-scripts]
pdfcompress-gui = "pdfcompress.gui:main"

[tool.setuptools]
packages = ["pdfcompress"]
